@startuml ExceptionHierarchy
hide circle
skinparam classAttributeIconSize 0
scale max 1024 width

class RuntimeException {
}

class "{abstract} \n InvalidCommandException" {
    - errorMessage: String[]
    # InvalidCommandException(errorMessage: String...)
    + getErrorMessages(): String[]
}

class InvalidCaseIdException {
}

class EmptyCommandException {
}

class InvalidSettingCommandException {
    + InvalidSettingCommandException(Boolean isTypeErrror)
    - {static} buildMessage(boolean isTypeError): String[]
}

class IncorrectFlagException {
    - invalidFlags: List<String>
    + IncorrectFlagException()
    + IncorrectFlagException(invalidFlags: List<String>)
    + getInvalidFlags(): List<String>
}

RuntimeException <|-- "{abstract} \n InvalidCommandException"
"{abstract} \n InvalidCommandException" <|-- InvalidCaseIdException
"{abstract} \n InvalidCommandException" <|-- InvalidSettingCommandException
"{abstract} \n InvalidCommandException" <|-- IncorrectFlagException
"{abstract} \n InvalidCommandException" <|-- EmptyCommandException

note left of "{abstract} \n InvalidCommandException"
Some irrelevant private variables (throughout this diagram}
have been omitted for clarity
end note

@enduml
